Fixed random gap in public profile answers page between the navbar and the content

--- a/app/assets/stylesheets/views/users/_answers.scss
+++ b/app/assets/stylesheets/views/users/_answers.scss
@@ -121,7 +121,6 @@
 
 .history-answers {
   & > .answer {
-    margin-bottom: 0;
-    margin-top: $margin;
+    margin: 0 0 $margin;
   }
 }
